# plane_dibr

./: 6dof_reader.cpp  6dof_reader.hpp  CMakeLists.txt  README.md  camera_info.ini  camera_info_test1.ini  camera_info_test2.ini  camera_info_test3.ini  camera_info_test4.ini  description_korean.md  main.cpp  plane_dibr.cpp  plane_dibr.hpp
test_src/: erpformat.cpp
